--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-<link rel="stylesheet" href="CSS/custom1.css"/>
+<link rel="stylesheet" href="custom1.css"/>
     <title>Emily Keebaugh Final Website</title>
   </head>
  
@@ -38,14 +38,14 @@
 </div>
 
 <div class="row1">
-<img src="Images/IMG_0511.jpg" alt="Selfie">
+<img src="IMG_0511.jpg" alt="Selfie">
   <span>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
   </span>
 </div>
 
 <div class="row2">
-  <img src="images/set-of-decorative-border-vector-20757579.jpg" alt="Decorative Border">
+  <img src="set-of-decorative-border-vector-20757579.jpg" alt="Decorative Border">
   10+ years art experience  //  4 years freelance experience  //  MVROP Certified
 </div>
 
