--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta1/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-  <link rel="stylesheet" href="css/customportfolio.css">
+  <link rel="stylesheet" href="customportfolio.css">
   <title>Portfolio</title>
 </head>
 <body>
@@ -41,21 +41,21 @@
   </div>
 
   <div class="imagerow1">
-    <img src="Images/aaron tattoo.png" alt="Tattoo Design">
-    <img src="Images/documentlayout_ramos-01.png" alt="App Mockup on Phone Screen">
-    <img src="images/documentlayout_ramos-02.png" alt="App Elements">
+    <img src="aaron tattoo.png" alt="Tattoo Design">
+    <img src="documentlayout_ramos-01.png" alt="App Mockup on Phone Screen">
+    <img src="documentlayout_ramos-02.png" alt="App Elements">
   </div>
 
   <div class="imagerow2">
-    <img src="Images/EOTTL-01.png" alt="Design Exercise with Girl and Cat">
-    <img src="Images/LiveorDie_CoverArt.png" alt="Cover Art - Live or Die">
-    <img src="Images/mugshotzdh-01.png" alt="Cover Art - Mugshot">
+    <img src="EOTTL-01.png" alt="Design Exercise with Girl and Cat">
+    <img src="LiveorDie_CoverArt.png" alt="Cover Art - Live or Die">
+    <img src="mugshotzdh-01.png" alt="Cover Art - Mugshot">
   </div>
 
   <div class="imagerow3">
-    <img src="Images/WMNAMO - Leatherface-01.png" alt="Cover Art - Leatherface">
-    <img src="Images/Crocogator.png" alt="Cartoon Crocodile Illustration">
-    <img src="Images/jonathan2.png" alt="Sketch of Jonathan">
+    <img src="WMNAMO - Leatherface-01.png" alt="Cover Art - Leatherface">
+    <img src="Crocogator.png" alt="Cartoon Crocodile Illustration">
+    <img src="jonathan2.png" alt="Sketch of Jonathan">
   </div>
 
 </body>
