--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-<link rel="stylesheet" href="CSS/customabout.css"/>
+<link rel="stylesheet" href="customabout.css"/>
     <title>About Me</title>
   </head>
 
@@ -39,7 +39,7 @@
   </div>
 
   <div class="container">
-      <img src="images/IMG_0511.jpg" alt="Selfie">
+      <img src="IMG_0511.jpg" alt="Selfie">
       <span>
         <h1> Hi! My name is Emily.</h1>
         Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -74,8 +74,8 @@
   </div>
   
 <div class="container4">
-  <img src="images/IMG_5099.JPG" alt="Cat">
-  <img src="images/IMG_3385.jpg" alt="Selfie with Cat">
+  <img src="IMG_5099.JPG" alt="Cat">
+  <img src="IMG_3385.jpg" alt="Selfie with Cat">
   <span>
     Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
   </span>
