--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-<link rel="stylesheet" href="CSS/customcontact.css"/>
+<link rel="stylesheet" href="customcontact.css"/>
     <title>Contact</title>
   </head>
 
