--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 
 
   <div class="border">
-    <img src="set-of-decorative-border-vector-20757579.jpg" alt="">
+    <img src="set-of-decorative-border-vector-20757579.jpg" alt="Decorative Border">
   </div>
 
   <div class="imagerow1">
