--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   </div>
 
   <div class="border">
-    <img src="set-of-decorative-border-vector-20757579.jpg" alt="">
+    <img src="set-of-decorative-border-vector-20757579.jpg" alt="Decorative Border">
   </div>
 
   <div class="container2">
